--- a/index.html
+++ b/index.html
@@ -4,27 +4,54 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
-        <title>Hoval Hrvatska</title>
+        <title>Alpe d'Huez</title>
     </head>
     <body>
         <header>
-            <h1 id="naslov">Hoval</h1>
+            <h1 id="naslov">Alpe d'Huez</h1>
         </header>
         <nav>
-            <a class = "button" href = "index.html" target = "_self">Početna</a>
-            <a class = "button" href = "aboutus.html" target="_self">O nama</a>
-            <a class = "button" href = "proizodi.html" target = "_self">Proizvodi</a>
+            <a class = "button" href = "index.html" target = "_self">Home</a>
         </nav>
         <main>
             <aside id="aside">
                 <p>Aside</p>
             </aside>
             <section id="section">
-                SEKCIJA
+                <h2>Alpe d'Huez</h2>
+                <p>
+                    <b>L'Alpe d'Huez </b>(French pronunciation: [l‿al.pə d‿ɥɛz]) is a ski resort in Southeastern France at 1,250 to 3,330 metres (4,100 to 10,925 ft). 
+                    It is a mountain pasture in the central French Western Alps, in the commune of Huez, which is part of the Isère department in the Auvergne-Rhône-Alpes region. <br> <br>
+                    It is part of the Grandes Rousses massif, over the Oisans, and is 59 km (37 mi) from Grenoble.
+                     The Alpe d'Huez resort is accessible from Grenoble by the RD 1091 [fr], which runs along the Romanche Valley passing through the communes of Livet-et-Gavet
+                      and Le Bourg-d'Oisans as well as Haut-Oisans via the Col de Sarenne. <br> <br>
+                      Alpe d'Huez is known internationally as an iconic cycling venue, as it is used regularly in the Tour de France cycle race, 
+                      including twice on the same day in 2013. In 2019, it became the site of the first <b>Tomorrowland Winter festival</b>.
+                </p>
+                <h2>History</h2>
+                <P>
+                    The site of the Alpe has been permanently occupied since the Middle Ages. East of L'Alpe veti,
+                    a medieval agglomeration had grown from the end of the 11th to the 14th century under the name of Brandes. 
+                    It was composed of a castle, a parish church with a cemetery, a village with about 80 homes, surface and underground mine workings,
+                    as well as several industrial districts. Its occupants operated a silver mine on behalf of the Dauphin. 
+                    It is currently the only medieval coron [fr][1] known and preserved in its entirety, making it a unique site
+                    in Europe and classified as historical monuments by a decree of 6 August 1995.[2] <br> <br>
+                    Excavated and studied continuously since 1977 by a team of the CNRS, this site is registered as an historic monument.
+                    [3] The medieval mining operation stretched from Gua (the Sarenne [fr] Valley) to the Lac Blanc [White Lake] (Massif des Rousses).
+                    The massif was also the subject of mining operations, including copper, from the Bronze Age.[4] <br> <br>
+                    It is also at Alpe d'Huez where botanist Gaston Bonnier began his study of flora of France in 1871.
+                    The station was developed from the 1920s. This is where the first platter lift for skiers was opened in 1936 with
+                     perches by Jean Pomagalski [fr], creator of the Poma company.
+                </P>
             </section>
         </main>
         <footer>
-            &copy; 2024 Hoval Hrvatska | <a href="#naslov">Povratak na vrh</a>
+            <div class = "kontakti">
+                Contacts: <a href="tel:+385991111222"><img src="https://cdn-icons-png.flaticon.com/256/10309/10309086.png" alt="Telefon"></a>
+                <a href="mailto:mislav.serdar1@gmail.com"><img src="https://cdn.pixabay.com/photo/2016/06/13/17/30/mail-1454731_640.png" alt="Email"></a>
+                <a href="https://goo.gl/maps/example" target="_blank"><img src="https://www.iconpacks.net/icons/2/free-location-icon-2955-thumb.png" alt="Lokacija"></a>
+            </div>
+            <p>© Copyright 2024 Mislav Serdar</p>
         </footer>
     </body>
 </html>
