--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ The township decree was promulgated on 27 June 1928, as a result of which Rovani
             <div class = "kontakti">
                 Contacts: <a href="tel:+385991111222"><img src="https://cdn-icons-png.flaticon.com/256/10309/10309086.png" alt="Telefon"></a>
                 <a href="mailto:mislav.serdar1@gmail.com"><img src="https://cdn.pixabay.com/photo/2016/06/13/17/30/mail-1454731_640.png" alt="Email"></a>
-                <a href="https://goo.gl/maps/example" target="_blank"><img src="https://www.iconpacks.net/icons/2/free-location-icon-2955-thumb.png" alt="Lokacija"></a>
+                <a href="https://maps.app.goo.gl/Mmi83nrWzWZPZx796" target="_blank"><img src="https://www.iconpacks.net/icons/2/free-location-icon-2955-thumb.png" alt="Lokacija"></a>
             </div>
             <p>© Copyright 2024 Mislav Serdar</p>
         </footer>
