--- a/layout.html
+++ b/layout.html
@@ -15,6 +15,7 @@
             <a class = "button" href = "leviski.html" target="_self">Levi Ski</a>
             <a class = "button" href = "santaclausvillage.html" target="_self">Santa Claus Village Rovaniemi</a>
             <a class = "button" href = "rovaniemiski.html" target="_self">Rovaniemi Ski</a>
+            <a class = "button" href = "gallery.html" target="_self">Gallery</a>
         </nav>
         <main>
             <aside>
