--- a/leviski.html
+++ b/leviski.html
@@ -15,14 +15,42 @@
             <a class = "button" href = "leviski.html" target="_self">Levi Ski</a>
             <a class = "button" href = "santaclausvillage.html" target="_self">Santa Claus Village Rovaniemi</a>
             <a class = "button" href = "rovaniemiski.html" target="_self">Rovaniemi Ski</a>
+            <a class = "button" href = "gallery.html" target="_self">Gallery</a>
         </nav>
         <main>
             <aside>
                 <iframe src="https://www.accuweather.com/en/fi/levi/84086_poi/weather-forecast/84086_poi"; title="Weather Levi"></iframe>
             </aside>
             <section id="section">
-                
-            </section>
+                <h1>Levi Ski</h1>
+                <p>Levi is a fell located in Finnish Lapland, and the largest ski resort in Finland.
+                    [1] The resort is located in the village of Sirkka, Kittilä municipality and is served 
+                    by Kittilä Airport and Kolari railway station. At a latitude of 67.8° north, it is located 
+                    approximately 170 km (110 mi) north of the Arctic Circle.<br><br>
+                    The peak of the Levi fell is at an elevation of 531 metres (1,742 ft) above sea level. There are 43 ski slopes 
+                    (17 of which are floodlit) and 27 ski lifts in Levi. Ascending the fell are 2 gondolas, 1 chairlift, 14 T-bar 
+                    lifts, 5 stick lifts, 4 rope tows, and 1 magic carpet for children. Levi is one of two locations of gondola lifts 
+                    in Finland, and has been chosen as the best domestic skiing resort in Finland four times.[2]<br><br>
+                    Levi is an early stop on the FIS Alpine Ski World Cup circuit, hosting slaloms in mid-November;[1] the races in
+                    2019 were held slightly later (November 23–24). With snowmaking, the climate provides a reliable early season 
+                    technical venue in Europe, prior to the late autumn events in North America.<br><br>
+                    The slopes in Levi are mostly suitable for beginners or intermediates, but there are also three black slopes for
+                    experts. The highest vertical drop is 325 m (1,066 ft) and the longest slope is 2.1 km (1.3 mi) in length. 
+                    The longest ski lift is about 1,636 metres (1.017 mi) long. Levi has one superpipe, one halfpipe, two streets, 
+                    two snow parks, 10 free children's slopes and seven slope restaurants.<br><br>
+                    The skiing and snowboarding season in Levi is fairly long, often lasting from October to mid-May. The ski school
+                    provides instruction in downhill skiing, snowboarding, telemark skiing and cross-country skiing. Cross-country 
+                    skiers have illuminated ski tracks and snow that lingers well into the spring. There are 230 km (140 mi) of 
+                    cross-country skiing tracks and 886 km (550 mi) of snowmobiling tracks in Levi.<br><br>
+                    The resort's latitude, north of the Arctic Circle, usually guarantees generous snow cover and sub-freezing 
+                    temperatures (< 0 °C (32 °F)) throughout winter. It also allows for excellent chances of observing the 
+                    Northern Lights. Although very popular in winter, Levi is very quiet in the summertime, yet still a good 
+                    base location for exploring the surrounding areas.<br><br>
+                    At 8 km (5 mi) from the centre of Levi is Luvattumaa, Levi Ice Hotel & Ice Gallery; 45 km (28 mi) from 
+                    Levi is the Snow Village Lainio, where one can view snow and ice buildings, eat in an ice restaurant 
+                    (in Lainio), or experience a night's sleep in an ice room.<br><br>
+            </p>
+        </section>
         </main>
         <footer>
             <div class = "kontakti">
