--- a/Web2/index.html
+++ b/Web2/index.html
@@ -5,6 +5,12 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <link rel="stylesheet" href="style.css">
         <title>Vjezba</title>
+        <style>
+            table, td,th{
+      border: black solid 1px;
+      border-collapse: collapse;
+    }
+        </style>
     </head>
     <body style = "margin: 0px;">
         <header style = "padding : 5vh; text-align: center; background-color: rgb(0, 89, 255)">
@@ -19,10 +25,22 @@
             </aside>
             <section style="width: 85%; float: left; text-align: left; background-color: rgb(212, 182, 143);">
                 <h1>Section</h1>
+                <br><br><br>
+                <a href = "https://www.strukovnasamobor.com"><img src="https://i.pinimg.com/736x/26/db/8e/26db8e1bc9a0eb238e69ae7d01a24fee.jpg"></a> <br>
+                <h2>ALOOO tablica</h2>
+                <table>
+                    <caption>Tablica</caption>
+                    <tr><th>RB</th> <th>ime</th> <th> Prezime </th> <th>Razred</th></tr>
+
+                    <tr><td>Jan</td> <td>Jan </td> <td> Janakis </td> <td rowspan="2">3.G</td></tr>
+                    <tr><td>OOPE</td> <td>ATE </td> <td> ALO </td></tr>
+                </table>
+
             </section>
         </main>
         <footer style="padding: 2vh; text-align: center; background-color: blueviolet;">
-            <p>© Copyright 2024 Mislav Serdar</p>
+            <p>© Copyright 2024 Mislav Serdar</p> <br>
+            <p>&lt</p>
         </footer>
     </body>
 </html>
