--- a/Web3/aboutme.html
+++ b/Web3/aboutme.html
@@ -37,7 +37,8 @@
   
   <main class="row">
     <aside class="col-xl-3 col-md-12 bg-secondary">
-      Left Aside
+     <nav>
+  </nav>
     </aside>
     <section class="col-xl-7 col-md-10 bg-success">
    Section
