--- a/Web3/game.html
+++ b/Web3/game.html
@@ -8,6 +8,15 @@
   <style>
     h1{
       text-align: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    margin: 0;
+    background-color: white;
+    z-index: 10;
+    padding: 10px 0;
+    box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     }
     body{
       margin:0px;
