--- a/Web3/index.html
+++ b/Web3/index.html
@@ -14,16 +14,16 @@
   <header>
     <h1 id="naslov">Novosti</h1>
   </header>
-
+  
   <nav>
-    <a href="index.html" target="_self">NOVOSTI</a>
-    <a href="skola.html" target="_self">ŠKOLA</a>
-    <a href="kontakt.html" target="_self">KONTAKT</a>
-    <a href="photowall.html" target="_self">PHOTOWALL</a>
-    <a href="game.html" target="_self">GAME</a>
-    <a href="aboutme.html" target="_self">ABOUTME</a>
+    <a class = "button" href="index.html" target="_self">NOVOSTI</a>
+    <a class = "button" href="skola.html" target="_self">ŠKOLA</a>
+    <a class = "button" href="kontakt.html" target="_self">KONTAKT</a>
+    <a class = "button" href="photowall.html" target="_self">PHOTOWALL</a>
+    <a class = "button" href="game.html" target="_self">GAME</a>
+    <a class = "button" href="aboutme.html" target="_self">ABOUTME</a>
   </nav>
-
+  
   <main>
     <aside>
     </aside>
@@ -70,11 +70,12 @@
     knjižničarka: Irena ŠEPL, prof. i dipl. bibl. <br>
     voditeljica nastave: Ivka MAGANJIĆ, dipl. oec. <br> <br>
     <ul>
-      <li><a href="index.html">Novosti</a></li>
-      <li><a href="kontakt.html">Kontakt</a></li>
-      <li><a href="skola.html">Skola</a></li>
-      <li><a href="photowall.html">Photowall</a></li>
-      <li><a href="game.html">Game</a></li>
+      <li><a href="index.html" target="_self">NOVOSTI</a></li>
+      <li><a href="skola.html" target="_self">ŠKOLA</a></li>
+      <li><a href="kontakt.html" target="_self">KONTAKT</a></li>
+      <li><a href="photowall.html" target="_self">PHOTOWALL</a></li>
+      <li><a href="game.html" target="_self">GAME</a></li>
+      <li><a href="aboutme.html" target="_self">ABOUTME</a></li>
     </ul>
     <b> &copy; Mislav Serdar 2024. </b><br>
   </footer>
