--- a/Web3/kontakt.html
+++ b/Web3/kontakt.html
@@ -14,12 +14,12 @@
   </header>
 
    <nav>
-    <a href="index.html" target="_self">NOVOSTI</a>
-    <a href="skola.html" target="_self">ŠKOLA</a>
-    <a href="kontakt.html" target="_self">KONTAKT</a>
-    <a href="photowall.html" target="_self">PHOTOWALL</a>
-    <a href="game.html" target="_self">GAME</a>
-    <a href="aboutme.html" target="_self">ABOUTME</a>
+    <a class = "button" href="index.html" target="_self">NOVOSTI</a>
+    <a class = "button" href="skola.html" target="_self">ŠKOLA</a>
+    <a class = "button" href="kontakt.html" target="_self">KONTAKT</a>
+    <a class = "button" href="photowall.html" target="_self">PHOTOWALL</a>
+    <a class = "button" href="game.html" target="_self">GAME</a>
+    <a class = "button" href="aboutme.html" target="_self">ABOUTME</a>
   </nav>
 
 
